@@ -1,6 +1,6 @@
 PACKAGE_NAME=LilyPond
 MAJOR_VERSION=2
 MINOR_VERSION=3
-PATCH_LEVEL=15
+PATCH_LEVEL=16
 MY_PATCH_LEVEL=
 
